--- a/webpack_01/package.json
+++ b/webpack_01/package.json
@@ -16,12 +16,15 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
     "expose-loader": "^0.7.5",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "html-withimg-loader": "^0.1.16",
     "mini-css-extract-plugin": "^0.7.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
+    "url-loader": "^2.0.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.5.1"
