--- a/webpack_02/package.json
+++ b/webpack_02/package.json
@@ -2,10 +2,18 @@
   "name": "webpack_02",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "dev":"webpack-dev-server",
+    "build": "webpack"
+  },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.4"
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.1"
   }
 }
